bk_ida/gccida/g0/gen_add3_insn
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4299:71: error: use of undeclared identifier 'insn_data_0'
&& insn_data_0[icode].operand->predicate( r0, *( ( unsigned __int16 *)insn_data_0[icode].operand + 8)) 
                                                                      ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4299:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand->predicate( r0, *( ( unsigned __int16 *)insn_data_0[icode].operand + 8)) 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4302:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8)) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4302:41: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[1] + 8)) 
                                        ^~~~~~~~~~~
                                        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4300:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[1].predicate( 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4305:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[2] + 8)) ) 
  ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4305:41: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
( machine_mode)*( ( unsigned __int16 *)&insn_data_0[icode].operand[2] + 8)) ) 
                                        ^~~~~~~~~~~
                                        insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4303:4: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
&& insn_data_0[icode].operand[2].predicate( 
   ^~~~~~~~~~~
   insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4307:8: error: use of undeclared identifier 'insn_data_0'; did you mean 'insn_data'?
return insn_data_0[icode].genfun( r0, r1, c); 
       ^~~~~~~~~~~
       insn_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/recog.h:249:31: note: 'insn_data' declared here
extern const struct insn_data insn_data[];
                              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/optabs.c:4307:33: error: called object type '<dependent type>' is not a function or function pointer
return insn_data_0[icode].genfun( r0, r1, c); 
                                ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/gen_add3_insn/src/obj/optabs.o] Error 1
